# route-split

./: .gitignore  Cargo.toml  README.md  app.manifest  app.rc  build.rs
.github/workflows/: release.yml
src/: app.rs  main.rs  network.rs  registry.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs  network.rs  registry.rs
src/platform/windows/: mod.rs  network.rs  registry.rs
src/ui/: action_panel.rs  cheatsheet.rs  log_panel.rs  mod.rs  status_panel.rs  theme.rs
