[package]
name = "route-split"
version = "0.1.0"
edition = "2021"
description = "路由分流工具 - 解决 Windows 多网卡路由冲突"
authors = ["GIWTO"]

[dependencies]
eframe = "0.29"
sysinfo = "0.32"
chrono = "0.4"
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "ico"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
